--- a/styles.css
+++ b/styles.css
@@ -76,8 +76,8 @@ body {
   padding: 10px;
   border-radius: 5px;
   margin: 10px 0;
-  color: #d9d9e0;
-  background-color: #2b1f1f;
+  color: #e7e7ee;
+  background-color: #332323;
 }
 
 .main-section ul, .main-section ol {
