--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ a {
   box-sizing: border-box;
 }
 
-
 body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
@@ -45,11 +44,13 @@ body {
   background-color: #332323;
 }
 
-.main-section ul, .main-section ol {
+.main-section ul,
+.main-section ol {
   margin: 10px 0 10px 20px;
 }
 
-.main-section ul li, .main-section ol li {
+.main-section ul li,
+.main-section ol li {
   margin-bottom: 5px;
 }
 
